# OpenPatch

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md
apps/local-worker/: .env.example  README.md  pyproject.toml
apps/local-worker/src/openpatch_local_worker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/local-worker/src/openpatch_worker/: __init__.py  config.py  main.py  models.py
apps/local-worker/src/openpatch_worker/api/: __init__.py  routes.py
apps/local-worker/src/openpatch_worker/schemas/: __init__.py  requests.py  responses.py
apps/local-worker/src/openpatch_worker/services/: __init__.py  active_repository.py  agent_graph.py  agent_service.py  command_runner.py  common.py  context_service.py  edit_service.py  file_service.py  git_providers.py  git_service.py  model_client.py  provider_service.py  (+5 more)
apps/local-worker/src/repooperator_local_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/local-worker/src/repooperator_worker/: __init__.py  config.py  main.py
apps/local-worker/tests/: test_agent_core_refactor.py  test_agent_routing_graph 2.py  test_agent_routing_graph.py  test_artifact_store.py  test_classifier_module.py  test_context_budget.py  test_context_reference_service.py  test_context_service.py  test_control_plane_safety.py  test_final_streaming_guard.py  test_permission_system.py  test_planner_steering_modules.py  test_provider_service.py  test_repository_review_progress.py  test_request_understanding.py  test_runtime_seams.py  test_tool_orchestrator.py  test_tool_registry.py  test_worker_contracts.py
(+237 files in other folders)
